# fast_api

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
.github/: .CODEOWNERS
.github/workflows/: docker-image.yml
api/: weather_api.py
constants/: abbreviations.py  units.py
infrastructure/: weather_cache.py
models/: location.py  validation_error.py
services/: openweather_service.py
static/css/: docs.css  theme.css
templates/home/: index.html
templates/shared/: layout.html
views/: home.py
